Fixing some more layout issues.

--- a/footsteps/css/main.scss
+++ b/footsteps/css/main.scss
@@ -338,6 +338,7 @@ ul {
 .tags{
 	display:block;
 	text-align:center;
+	padding: 0px 10px 10px;
 }
 
 /**** Traveller Page ****/
