--- a/footsteps/css/slick-mods.scss
+++ b/footsteps/css/slick-mods.scss
@@ -29,7 +29,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 ul.slick-dots {
 	max-width: 200px;
-	margin: 0px auto 10px;
+	margin: 6px auto;
 	text-align: center;
 }
 
